--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -1,10 +1,14 @@
 /* Color Theme Swatches in Hex */
 body {
     background-color: #2D4262;
-    display: flex;
-    flex-flow: column nowrap;
     font-family: 'Lexend Deca', sans-serif;
     margin-top: 10rem;
+}
+
+.wrapper {
+    display: flex;
+    flex-flow: column nowrap;
+    margin: 0 auto;
 }
 
 h1 {
@@ -37,6 +41,14 @@ h1 {
     border-right: 3px solid #FFFFFF;
 }
 
+p {
+    margin: 0 auto;
+}
+
+h2 {
+    margin: 0 auto;
+}
+
 footer {
     background-color: #FFFFFF;
     color: #2D4262;
@@ -49,6 +61,7 @@ footer {
 }
 
 ul {
+    margin: 0 auto;
     list-style-type: none;
 }
 
@@ -60,6 +73,24 @@ ul a{
     color: #E37D64;
 }
 
+.page a:hover {
+    background-color: #D1FFD6;
+    color:  #2D4262;
+    border-radius: 10px;
+    padding: .25rem;
+}
+
 .link a {
     color: #2D4262;
+}
+
+.link a:hover {
+    background-color: #2D4262;
+    color: #D1FFD6;
+    border-radius: 10px;
+    padding: .25rem;
+}
+
+li {
+    padding: .25rem;
 }
