--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -42,11 +42,12 @@ h1 {
 }
 
 p {
-    padding: 1rem;
+    padding: .5rem;
     margin: 0 auto;
 }
 
 h2 {
+    padding: .5rem;
     margin: 0 auto;
 }
 
@@ -64,6 +65,7 @@ footer {
 ul {
     margin: 0 auto;
     list-style-type: none;
+    padding-bottom: .5rem;
 }
 
 ul a{
