--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -56,6 +56,8 @@ p {
 h2 {
     padding: .5rem;
     margin: 0 auto;
+    font-size: 20px;
+    text-align: center;
 }
 
 footer {
@@ -84,9 +86,15 @@ ul a{
     padding: 3px 0 3px 0;
 }
 
+.page {
+    text-align: center;
+}
 
 .page a {
-    color: #E37D64;
+    background-color: #E37D64;
+    color: #FDE7BB;
+    padding: .25rem;
+    border-radius: 10px;    
 }
 
 .page a:hover {
@@ -109,5 +117,6 @@ ul a{
 }
 
 li {
-    padding: .25rem;
+    padding: .30rem;
 }
+
