--- a/WebDev HTML/css/style.css
+++ b/WebDev HTML/css/style.css
@@ -66,6 +66,7 @@ body {
   
   p {
     border: 1px solid black;
+    border-right: 1px solid white;
     margin: 0;
     padding: 1rem;
     border-bottom: 2px solid black;
